samples/_failures_safe/1761604581_4ab655_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab4b68b7.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_ab4b68b7.c:158:38: error: expected ‘;’ at end of input
  158 |         case TOKEN_IDENTIFIER: printf
      |                                      ^
      |                                      ;
./samples/SAFE/__tmp_ab4b68b7.c:158:9: error: expected declaration or statement at end of input
  158 |         case TOKEN_IDENTIFIER: printf
      |         ^~~~
./samples/SAFE/__tmp_ab4b68b7.c:158:9: error: expected declaration or statement at end of input
